--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,10 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Set up SSH
-      uses: webfactory/ssh-agent@v0.7.0
+      uses: khalyomede/ssh-action@v2
       with:
-        ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
+        key: ${{ secrets.EC2_SSH_KEY }}
+          # known_hosts: ${{ secrets.EC2_KNOWN_HOSTS }} # Optional, add known hosts if needed
 
     - name: Deploy to EC2
       run: |
@@ -27,3 +28,4 @@ jobs:
           # npm run build         # Uncomment if you need to build your app
           sudo systemctl restart nginx # Restart Nginx or your application
         EOF
+
