--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,11 +21,19 @@ jobs:
     - name: Deploy to EC2
       run: |
         ssh -o StrictHostKeyChecking=no -i private_key.pem ubuntu@54.145.52.75 << 'EOF'
-          # Navigate to the directory of your app
+        
+          git config --global --add safe.directory /var/www/html
+
+          sudo chown -R ubuntu:ubuntu /var/www/html
+
+           
+        # Navigate to the directory of your app
           cd /var/www/html 
 
           # Optional: If you are using git to manage your application, pull the latest changes
           git pull origin main 
+ 
+          cat index.html
 
           sudo systemctl restart nginx 
         EOF
